--- a/.tekton/porta-push.yaml
+++ b/.tekton/porta-push.yaml
@@ -34,6 +34,12 @@ spec:
     - linux/x86_64
   - name: dockerfile
     value: rh-porta/Containerfile
+  - name: prefetch-input
+    value:
+      - {"type": "rpm", "path": "rh-porta"}
+      - {"type": "bundler", "path": "rh-porta/porta/"}
+  - name: hermetic
+    value: "true"
   - name: build-source-image
     value: "true"
   pipelineSpec:
@@ -189,6 +195,8 @@ spec:
         value: $(params.output-image).prefetch
       - name: ociArtifactExpiresAfter
         value: $(params.image-expires-after)
+      - name: dev-package-managers
+        value: "true"
       runAfter:
       - clone-repository
       taskRef:
