--- a/rh-porta/Containerfile
+++ b/rh-porta/Containerfile
@@ -1,4 +1,4 @@
-FROM registry.access.redhat.com/ubi8:8.10-1161 AS builder
+FROM registry.access.redhat.com/ubi8:8.10-1161.1735829865 AS builder
 
 ENV YARN_MAJOR_VERSION=1 \
     YARN_MINOR_VERSION=22 \
@@ -6,8 +6,8 @@ ENV YARN_MAJOR_VERSION=1 \
 ENV YARN_VERSION="${YARN_MAJOR_VERSION}.${YARN_MINOR_VERSION}.${YARN_PATCH_VERSION}"
 
 
-ENV RUBY_MAJOR_VERSION=2 \
-    RUBY_MINOR_VERSION=7 \
+ENV RUBY_MAJOR_VERSION=3 \
+    RUBY_MINOR_VERSION=1 \
     RAILS_ENV=production \
     NODE_ENV=production
 ENV RUBY_VERSION="${RUBY_MAJOR_VERSION}.${RUBY_MINOR_VERSION}"
@@ -18,10 +18,11 @@ COPY ./rh-porta/porta /opt/system
 
 WORKDIR /opt/system
 
-RUN cp -pR openshift/system/config/* config/ \
+RUN cp -pR config/examples/*.yml config/ \
+    && cp -pR openshift/system/config/* config/ \
     && echo '{"revision": "${CI_X_VERSION}.${CI_Y_VERSION}-stable", "release": "${CI_X_VERSION}.${CI_Y_VERSION}"}' > .deploy_info
 
-RUN dnf -y module enable ruby:${RUBY_VERSION} nodejs:16 mysql:8.0 \
+RUN dnf -y module enable ruby:${RUBY_VERSION} nodejs:18 mysql:8.0 \
     && dnf install -y --setopt=skip_missing_names_on_install=False,tsflags=nodocs shared-mime-info make automake gcc gcc-c++ redhat-rpm-config postgresql rubygem-irb rubygem-rdoc ruby-devel nodejs libpq-devel mysql-devel gd-devel git 'dnf-command(download)' podman-catatonit libxml2-devel libxslt-devel
 
 # install bundler
@@ -46,7 +47,6 @@ RUN yarn --frozen-lockfile --check-files --no-progress \
     && SECRET_KEY_BASE=rails/32947 bundle exec rake assets:precompile tmp:clear \
     && rm -rf node_modules /usr/local/share/gems/cache /usr/local/share/gems/doc
 
-# Generate licenses report file
 # TODO: check if the SBOM provided by konflux already provides the license info
 #RUN LICENSES_REPORT=/root/licenses/3scale-amp-system-container/licenses.xml \
 #    && bundle exec license_finder action_items --quiet \
@@ -76,10 +76,10 @@ RUN dnf install -y mysql-server mysql-test \
     && grep -q "rt_field = account_id" "$THINKING_SPHINX_CONFIGURATION_FILE" \
     && kill $(</run/mysqld/mysqld.pid)
 
-FROM registry.access.redhat.com/ubi8:8.10-1161 AS prod
+FROM registry.access.redhat.com/ubi8:8.10-1161.1735829865 AS prod
 
-ENV RUBY_MAJOR_VERSION=2 \
-    RUBY_MINOR_VERSION=7 \
+ENV RUBY_MAJOR_VERSION=3 \
+    RUBY_MINOR_VERSION=1 \
     SAFETY_ASSURED=1 \
     TZ=:/etc/localtime \
     RAILS_ENV=production \
@@ -113,12 +113,12 @@ COPY --from=builder /opt/system/ .
 COPY --from=builder /usr/local/share/gems /usr/local/share/
 COPY --from=builder /usr/local/bin/bundle* /usr/local/bin
 # TODO: check if the SBOM provided by konflux already provides the license info
-#COPY --from=builder /root/licenses/3scale-amp-system-container/licenses.xml /root/licenses/3scale-amp-system-container/licenses.xml
+# COPY --from=builder /root/licenses/3scale-amp-system-container/licenses.xml /root/licenses/3scale-amp-system-container/licenses.xml
 # in RHEL 8 podman-catatonit pulls in too many useless deps so we don't install the RPM directly, on RHEL 9 simply use package `catatonit`
 COPY --from=builder /usr/libexec/catatonit/catatonit /usr/libexec/catatonit/catatonit
 
 RUN subscription-manager refresh \
-    && dnf -y --setopt=module_stream_switch=True module enable ruby:${RUBY_VERSION} nodejs:16 mysql:8.0 \
+    && dnf -y --setopt=module_stream_switch=True module enable ruby:${RUBY_VERSION} nodejs:18 mysql:8.0 \
     && dnf install -y --setopt=skip_missing_names_on_install=False,tsflags=nodocs shared-mime-info postgresql rubygem-irb rubygem-rdoc ruby libpq mysql mysql-libs gd git liberation-sans-fonts file libxml2 libxslt jemalloc \
     && dnf -y clean all
 
