--- a/.tekton/apicast-operator-bundle-push.yaml
+++ b/.tekton/apicast-operator-bundle-push.yaml
@@ -30,6 +30,8 @@ spec:
     value: quay.io/redhat-user-workloads/3scale-prod-tenant/apicast-operator-bundle:{{revision}}
   - name: dockerfile
     value: rh-apicast-operator/Containerfile.apicast-operator-bundle
+  - name: build-source-image
+    value: "true"
   pipelineSpec:
     description: |
       This pipeline is ideal for building container images from a Containerfile while maintaining trust after pipeline customization.
