--- a/.tekton/porta-push.yaml
+++ b/.tekton/porta-push.yaml
@@ -34,6 +34,8 @@ spec:
     - linux/x86_64
   - name: dockerfile
     value: rh-porta/Containerfile
+  - name: build-source-image
+    value: "true"
   pipelineSpec:
     description: |
       This pipeline is ideal for building multi-arch container images from a Containerfile while maintaining trust after pipeline customization.
