--- a/.tekton/searchd-push.yaml
+++ b/.tekton/searchd-push.yaml
@@ -41,6 +41,8 @@ spec:
       - {"type": "rpm", "path": "rh-searchd"}
   - name: hermetic
     value: "true"
+  - name: build-source-image
+    value: "true"
   pipelineSpec:
     description: |
       This pipeline is ideal for building multi-arch container images from a Containerfile while maintaining trust after pipeline customization.
