--- a/.tekton/toolbox-push.yaml
+++ b/.tekton/toolbox-push.yaml
@@ -39,6 +39,8 @@ spec:
       - {"type": "bundler", "path": "rh-toolbox/toolbox/"}
   - name: hermetic
     value: "true"
+  - name: build-source-image
+    value: "true"
   pipelineSpec:
     description: |
       This pipeline is ideal for building multi-arch container images from a Containerfile while maintaining trust after pipeline customization.
