--- a/.tekton/zync-push.yaml
+++ b/.tekton/zync-push.yaml
@@ -40,6 +40,8 @@ spec:
       - {"type": "bundler", "path": "rh-zync/zync/"}
   - name: hermetic
     value: "true"
+  - name: build-source-image
+    value: "true"
   pipelineSpec:
     description: |
       This pipeline is ideal for building multi-arch container images from a Containerfile while maintaining trust after pipeline customization.
