--- a/.tekton/apicast-operator-bundle-push.yaml
+++ b/.tekton/apicast-operator-bundle-push.yaml
@@ -11,6 +11,9 @@ metadata:
       ".tekton/apicast-operator-bundle-push.yaml".pathChanged() ||
       "rh-apicast-operator/Containerfile.apicast-operator-bundle".pathChanged() ||
       "rh-apicast-operator/apicast-operator".pathChanged() ||
+      "rpms.in.yaml".pathChanged() ||
+      "rpms.lock.yaml".pathChanged() ||
+      "pyproject.toml".pathChanged() ||
       "rh-apicast-operator/bundle-hack/***".pathChanged())
   creationTimestamp: null
   labels:
@@ -30,6 +33,14 @@ spec:
   - name: dockerfile
     value: rh-apicast-operator/Containerfile.apicast-operator-bundle
   - name: build-source-image
+    value: "true"
+  - name: hermetic
+    value: "true"
+  - name: prefetch-input
+    value: 
+      - {"type": "rpm", "path": "."}
+      - {"type": "pip", "path": "."}
+  - name: prefetch-dev-package-managers-enabled
     value: "true"
   pipelineSpec:
     description: |
