--- a/.tekton/apicast-operator-push.yaml
+++ b/.tekton/apicast-operator-push.yaml
@@ -29,7 +29,14 @@ spec:
     value: quay.io/redhat-user-workloads/3scale-prod-tenant/apicast-operator:{{revision}}
   - name: build-platforms
     value:
-    - linux/x86_64
+      - localhost
+      - linux/arm64
+    # - linux/ppc64le
+    # - linux/s390x
+  - name: prefetch-input
+    value: '{"type": "gomod", "path": "rh-apicast-operator/apicast-operator"}'
+  - name: hermetic
+    value: "true"
   - name: dockerfile
     value: rh-apicast-operator/Containerfile.apicast-operator
   - name: build-source-image
