--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,7 @@
 [submodule "drift-detection"]
 	path = drift-detection
 	url = https://github.com/arewm/drift-detection
+[submodule "rh-3scale-operator/3scale-operator"]
+	path = rh-3scale-operator/3scale-operator
+	url = https://github.com/3scale/3scale-operator.git
+	branch = master
