--- a/.tekton/apicast-operator-bundle-push.yaml
+++ b/.tekton/apicast-operator-bundle-push.yaml
@@ -7,7 +7,8 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch == "main" &&
-      (".tekton/single-arch-build-pipeline.yaml".pathChanged() ||
+      # reenable when enabling single arch pipeline
+      # (".tekton/single-arch-build-pipeline.yaml".pathChanged() ||
       ".tekton/apicast-operator-bundle-pull-request.yaml".pathChanged() ||
       ".tekton/apicast-operator-bundle-push.yaml".pathChanged() ||
       "rh-apicast-operator/Containerfile.apicast-operator-bundle".pathChanged() ||
