--- a/.tekton/apicast-operator-push.yaml
+++ b/.tekton/apicast-operator-push.yaml
@@ -7,7 +7,8 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch == "main" &&
-      (".tekton/multi-arch-build-pipeline.yaml".pathChanged() ||
+      #  reenable when enabling multi-arch
+      # (".tekton/multi-arch-build-pipeline.yaml".pathChanged() ||
       ".tekton/apicast-operator-pull-request.yaml".pathChanged() ||
       ".tekton/apicast-operator-push.yaml".pathChanged() ||
       "rh-apicast-operator/Containerfile.apicast-operator".pathChanged() ||
