--- a/.tekton/apicast-operator-bundle-pull-request.yaml
+++ b/.tekton/apicast-operator-bundle-pull-request.yaml
@@ -8,9 +8,7 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch == "main" &&
-      # re-enable when enabling single arch
-      # (".tekton/single-arch-build-pipeline.yaml".pathChanged() ||
-      ".tekton/apicast-operator-bundle-pull-request.yaml".pathChanged() ||
+      (".tekton/apicast-operator-bundle-pull-request.yaml".pathChanged() ||
       ".tekton/apicast-operator-bundle-push.yaml".pathChanged() ||
       "rh-apicast-operator/Containerfile.apicast-operator-bundle".pathChanged() ||
       "rh-apicast-operator/apicast-operator".pathChanged() ||
