--- a/.tekton/apicast-operator-pull-request.yaml
+++ b/.tekton/apicast-operator-pull-request.yaml
@@ -2,17 +2,17 @@ apiVersion: tekton.dev/v1
 kind: PipelineRun
 metadata:
   annotations:
-    build.appstudio.openshift.io/repo: https://github.com/rh-api-management/rh-3scale?rev={{revision}}
+    build.appstudio.openshift.io/repo: https://github.com/rh-api-management/rh-3scale?rev={{revision}
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
     build.appstudio.redhat.com/pull_request_number: '{{pull_request_number}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch == "main" &&
       (".tekton/apicast-operator-pull-request.yaml".pathChanged() ||
+      ".tekton/multi-arch-build-pipeline.yaml".pathChanged() ||
       ".tekton/apicast-operator-push.yaml".pathChanged() ||
       "rh-apicast-operator/Containerfile.apicast-operator".pathChanged() ||
       "rh-apicast-operator/apicast-operator".pathChanged())
-
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: threescale
