--- a/.tekton/apicast-operator-bundle-push.yaml
+++ b/.tekton/apicast-operator-bundle-push.yaml
@@ -40,6 +40,8 @@ spec:
       - {"type": "pip", "path": "rh-apicast-operator/"}
   - name: prefetch-dev-package-managers-enabled
     value: "true"
+  - name: build-source-image
+    value: "true"
   pipelineRef:
     name: single-arch-build-pipeline
   workspaces:
