--- a/.tekton/threescale-operator-pull-request.yaml
+++ b/.tekton/threescale-operator-pull-request.yaml
@@ -44,6 +44,8 @@ spec:
     value: '{"type": "gomod", "path": "rh-3scale-operator/3scale-operator/"}'
   - name: hermetic
     value: "true"
+  - name: build-source-image
+    value: "true"
   pipelineRef:
     name: build-pipeline
   workspaces:
