--- a/.tekton/threescale-operator-push.yaml
+++ b/.tekton/threescale-operator-push.yaml
@@ -5,7 +5,6 @@ metadata:
     build.appstudio.openshift.io/repo: https://github.com/rh-api-management/rh-3scale?rev={{revision}}
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
-    build.appstudio.openshift.io/build-nudge-files: "bundle-hack/update_bundle.sh"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch == "main" &&
       (".tekton/multi-arch-build-pipeline.yaml".pathChanged() ||
@@ -40,6 +39,8 @@ spec:
   - name: prefetch-input
     value: '{"type": "gomod", "path": "rh-3scale-operator/3scale-operator/"}'
   - name: hermetic
+    value: "true"
+  - name: build-source-image
     value: "true"
   pipelineRef:
     name: build-pipeline
