add arm64 support

--- a/.tekton/apicast-operator-pull-request.yaml
+++ b/.tekton/apicast-operator-pull-request.yaml
@@ -40,6 +40,7 @@ spec:
       - linux/amd64
       - linux/ppc64le
       - linux/s390x
+      - linux/arm64
   - name: prefetch-input
     value: '{"type": "gomod", "path": "rh-apicast-operator/apicast-operator/"}'
   - name: hermetic
