--- a/.tekton/apicast-gateway-pull-request.yaml
+++ b/.tekton/apicast-gateway-pull-request.yaml
@@ -43,7 +43,7 @@ spec:
   - name: build-source-image
     value: "true"
   - name: hermetic
-    value: "true"
+    value: "false"
   pipelineRef:
     name: build-pipeline
   workspaces:
