--- a/.tekton/apicast-gateway-push.yaml
+++ b/.tekton/apicast-gateway-push.yaml
@@ -36,15 +36,23 @@ spec:
     - linux/s390x
   - name: dockerfile
     value: rh-apicast/apicast/Containerfile
+  - name: prefetch-input
+    value:
+      - {"type": "rpm", "path": "rh-apicast"}
   - name: path-context
     value: rh-apicast/apicast
   - name: build-source-image
     value: "true"
   - name: hermetic
-    value: "false"
+    value: "true"
   pipelineRef:
     name: build-pipeline
   workspaces:
   - name: git-auth
     secret:
       secretName: '{{ git_auth_secret }}'
+  pipelineSpec:
+    - name: prefech-dependencies
+      params:
+        - name: dev-package-managers
+          value: "true"
