--- a/.tekton/apicast-gateway-push.yaml
+++ b/.tekton/apicast-gateway-push.yaml
@@ -46,7 +46,7 @@ spec:
   - name: hermetic
     value: "true"
   pipelineRef:
-    name: build-pipeline
+    name: multi-arch-build-pipeline
   workspaces:
   - name: git-auth
     secret:
