--- a/.tekton/apicast-operator-pull-request.yaml
+++ b/.tekton/apicast-operator-pull-request.yaml
@@ -48,7 +48,7 @@ spec:
   - name: build-source-image
     value: "true"
   pipelineRef:
-    name: build-pipeline
+    name: multi-arch-build-pipeline
   workspaces:
   - name: git-auth
     secret:
