--- a/.tekton/apicast-operator-push.yaml
+++ b/.tekton/apicast-operator-push.yaml
@@ -44,7 +44,7 @@ spec:
   - name: build-source-image
     value: "true"
   pipelineRef:
-    name: build-pipeline
+    name: multi-arch-build-pipeline
   workspaces:
   - name: git-auth
     secret:
