--- a/.tekton/threescale-operator-pull-request.yaml
+++ b/.tekton/threescale-operator-pull-request.yaml
@@ -47,7 +47,7 @@ spec:
   - name: build-source-image
     value: "true"
   pipelineRef:
-    name: build-pipeline
+    name: multi-arch-build-pipeline
   workspaces:
   - name: git-auth
     secret:
