--- a/.tekton/threescale-operator-push.yaml
+++ b/.tekton/threescale-operator-push.yaml
@@ -43,7 +43,7 @@ spec:
   - name: build-source-image
     value: "true"
   pipelineRef:
-    name: build-pipeline
+    name: multi-arch-build-pipeline
   workspaces:
   - name: git-auth
     secret:
