[pipeline] rename multi-arch pipeline

--- a/.tekton/apicast-gateway-pull-request.yaml
+++ b/.tekton/apicast-gateway-pull-request.yaml
@@ -45,7 +45,7 @@ spec:
   - name: hermetic
     value: "false"
   pipelineRef:
-    name: build-pipeline
+    name: multi-arch-build-pipeline
   workspaces:
   - name: git-auth
     secret:
