--- a/.tekton/apicast-gateway-push.yaml
+++ b/.tekton/apicast-gateway-push.yaml
@@ -43,7 +43,7 @@ spec:
   - name: hermetic
     value: "false"
   pipelineRef:
-    name: build-pipeline
+    name: multi-arch-build-pipeline
   workspaces:
   - name: git-auth
     secret:
