--- a/.tekton/apicast-gateway-push.yaml
+++ b/.tekton/apicast-gateway-push.yaml
@@ -41,7 +41,12 @@ spec:
   - name: build-source-image
     value: "true"
   - name: hermetic
-    value: "false"
+    value: "true"
+  - name: prefetch-input
+    value:
+      - {"type": "rpm", "path": "rh-apicast"}
+  - name: prefetch-dev-package-managers-enabled
+    value: "true"
   pipelineRef:
     name: multi-arch-build-pipeline
   workspaces:
