--- a/rh-porta/Containerfile
+++ b/rh-porta/Containerfile
@@ -42,13 +42,12 @@ RUN set -x \
     && DB=oracle bundle package --no-install \
     && bundle config set --local without development:test
 
-# install yarn
+# install yarn 1.22.19
 RUN cd /opt/system/script/yarn \
-    && npm install --global /cachi2/output/deps/npm/yarn-${YARN_VERSION}.tgz
+    && npm install --global /cachi2/output/deps/npm/yarn-${YARN_VERSION}.tgz 
 
 RUN yarn --frozen-lockfile --check-files --no-progress \
-    # TODO: update to SECRET_KEY_BASE_DUMMY=1 when we upgrade to Rails 7.0
-    && SECRET_KEY_BASE=rails/32947 bundle exec rake assets:precompile tmp:clear \
+    && RAILS_ENV=production SECRET_KEY_BASE=rails/32947 bundle exec rake assets:precompile tmp:clear \
     && rm -rf node_modules /usr/local/share/gems/cache /usr/local/share/gems/doc
 
 # TODO: check if the SBOM provided by konflux already provides the license info
